apps/kiali/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - kiali.home.alden.ai
  rules:
  - backendRefs:
    - name: kiali
      port: 20001
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
