apps/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kiali-virtualservice
spec:
  hosts:
    - kiali.home.alden.ai
    - kiali.kiali.svc.cluster.local
    - kiali.kiali
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali.kiali.svc.cluster.local
            port:
              number: 20001
