apps/kiali/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: kiali
spec:
  action: CUSTOM
  provider:
    name: authelia
  rules:
    - to:
        - operation:
            hosts:
              - kiali.home.alden.ai
  selector:
    matchLabels:
      app: kiali
